imac/traefik/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.imac.defn.ooo`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
